fix: swagger docs, migrations, add calc sum handler/repo
